--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <header class="main_header">
 
-        <a href="">LOGO</a>
+        <a href="#logo">LOGO</a>
 
         <ul>
             <li><a href="#about">ABOUT</a></li>
@@ -24,11 +24,11 @@
 
     </header>
 
-    <section class="home_section">
+    <section class="home_section" id="logo">
         <div class="section_1">
             <h1>Start something that matters</h1>
             <br>
-            <p>Stop wasting valuable time with projects that just isn't you.</p>
+            <p class="subtitle">Stop wasting valuable time with projects that just isn't you.</p>
             <br>
             <p><a href="about">Learn more and start today</a></p>
         </div>
@@ -40,6 +40,35 @@
             <i class="fa fa-pinterest-p"></i>
             <i class="fa fa-twitter"></i>
             <i class="fa fa-linkedin"></i>
+        </div>
+    </section>
+    <section class="about_company" id="about">
+        <div class="about_head">
+            <h3>ABOUT THE COMPANY</h3>
+            <p class="subtitle">Key features of our company</p>
+
+            <div class="subsection">
+                <div class="about_icons">
+                    <i class="fa fa-desktop"></i>
+                    <p class="subtitle">Responsive</p>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore.</p>
+                </div>
+                <div class="about_icons">
+                    <i class="fa fa-heart"></i>
+                    <p class="subtitle">Passion</p>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore.</p>
+                </div>
+                <div class="about_icons">
+                    <i class="fa fa-diamond"></i>
+                    <p class="subtitle">Design</p>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore.</p>
+                </div>
+                <div class="about_icons">
+                    <i class="fa fa-cog"></i>
+                    <p class="subtitle">Support</p>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore.</p>
+                </div>
+            </div>
         </div>
     </section>
 
