--- a/index.html
+++ b/index.html
@@ -71,6 +71,19 @@
             </div>
         </div>
     </section>
+    <section class="about_work">
+        <div>
+            <h3>We know design.</h3>
+            <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+                <br> tempor incididunt ut labore et dolore.
+            </p>
+            <p><a href="#work"><i class="fa fa-th"></i> View Our Works</a></p>
+        </div>
+        <div>
+            <img src="./img/phone_buildings.jpg" alt="Buildings">
+        </div>
+    </section>
 
 </body>
 
